--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </section>
 
 
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="./assets/script.js"></script>
     <!-- script for maginfying glass logo in search bar -->
     <script src="https://kit.fontawesome.com/67386b82fb.js" crossorigin="anonymous"></script>
