fixed jquery link

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
 
     <script src="./assets/javascript/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <!-- script for maginfying glass logo in search bar -->
     <script src="https://kit.fontawesome.com/67386b82fb.js" crossorigin="anonymous"></script>
   </body>
