added get smashed section, and added logo

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 
   <body>
   
+    <header class="logo">
+    <img src="assets/images/slashed-and-smashed-horizontal-1.png" alt="logo">
+    </header>
+
+
     <section">
-    
       <div class="container">
         <p>Horror Finder</p>
         <form>
@@ -37,7 +41,7 @@
       <h2 id="movie-title">Title</h2>
       <p id="movie-description">description</p>
       <p id="movie-year">year</p>
-      <p id="movie-rating">rating</p>
+      <p id="get-smashed-generator">Get Smashed?</p>
       <img src="./assets/images/netflix-logo.png" alt="netflix" class="float-right" id="icon-netflix"/>
       <img src="./assets/images/hulu-logo.png" alt="hulu" class="float-right" id="icon-hulu"/>
       <img src="./assets/images/prime-logo.png" alt="amazon prime" class="float-right" id="icon-prime"/>
