added streaming logos to buttons

--- a/index.html
+++ b/index.html
@@ -27,11 +27,18 @@
       </div>
 
       <div class="service-btn">
-        <button type="button">hu</button>
-        <button type="button">Ne</button>
-        <button type="button">D+</button>
-        <button type="button">Pe</button>
-        <button type="button">HB</button>
+        <button type="button">
+          <img src="assets/images/hulu-logo.png" alt="hulu-logo">
+          </button>
+        <button type="button">
+        <img src="assets/images/netflix-logo.png" alt="netflix-logo">
+        </button>
+        <button type="button">
+          <img src="assets/images/prime-logo.png" alt="prime-logo">
+        </button>
+        <button type="button">
+          <img src="assets/images/hbo-logo.png" alt="HBO-logo">
+        </button>
       </div>
       
     </section>
