linked CocktailDB API

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
         <p>Horror Finder</p>
         <form>
           <i class="fa fa-search"></i>
-          <input type="text" placeholder="what are you looking for ?">
+          <input id = "movie" type="text" placeholder="what are you looking for ?">
           <button id = "submit" type="submit"></submit>Search</button>
         </form>
       </div>
 
       <div class="service-btn">
-        <button type="button">hu</button>
+        <button type="button">
+        </button>
         <button type="button">Ne</button>
         <button type="button">D+</button>
         <button type="button">Pe</button>
