added better default text in searchbox

--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
 
     <section">
       <div class="container">
-        <p>Horror Finder</p>
         <form>
           <i class="fa fa-search"></i>
-          <input type="text" placeholder="what are you looking for ?">
+          <input type="text" placeholder="type in your favorite horror movie 🧟‍♂️?">
           <button id = "submit" type="submit"></submit>Search</button>
         </form>
       </div>
@@ -54,8 +53,6 @@
       <img src="./assets/images/prime-logo.png" alt="amazon prime" class="float-right" id="icon-prime"/>
       <img src="./assets/images/hbo-logo.png" alt="HBO" class="float-right" id="icon-hbo"/>
     </section>
-
-
 
     <script src="./assets/javascript/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
