added functionality to cocktailAPI fetch request

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <form>
           <i class="fa fa-search"></i>
 
-          <input type="text" placeholder="type in your favorite horror movie 🧟‍♂️?">
+          <input type="text" id="movie" placeholder="type in your favorite horror movie 🧟‍♂️?">
           
           <button id = "submit" type="submit"></submit>Search</button>
         </form>
@@ -56,6 +56,9 @@
       <img src="./assets/images/hulu-logo.png" alt="hulu" class="float-right" id="icon-hulu"/>
       <img src="./assets/images/prime-logo.png" alt="amazon prime" class="float-right" id="icon-prime"/>
       <img src="./assets/images/hbo-logo.png" alt="HBO" class="float-right" id="icon-hbo"/>
+    </section>
+
+    <section id="drink-card">
     </section>
 
     <script src="./assets/javascript/script.js"></script>
