created title card

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     </section>
 
     <section class="movie-card">
-      <div id="movie-poster"></div>
       <h2 id="movie-title">Title</h2>
+      <div id="movie-poster"><img src="assets\images\placeholder.jpg" alt=""></div>
       <p id="movie-description">description</p>
       <p id="movie-year">year</p>
       <p id="get-smashed-generator">Get Smashed?</p>
