--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
         <form>
           <i class="fa fa-search"></i>
 
-
-          <input type="text" placeholder="type in your favorite horror movie 🧟‍♂️">
+          <input type="text" id="movie" placeholder="type in your favorite horror movie 🧟‍♂️">
           
           <button id = "submit" type="submit"></submit>Search</button>
         </form>
