--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
       <br>
 
-    <div>
+    <div class="flex-container">
       <p>select by streaming services 👻</p>
     </div>
 
       <div class="service-btn">
-        <button type="button">
+        <button type="button" id="hulu">
           <img src="assets/images/hulu-logo.png" alt="hulu-logo">
           </button>
         <button type="button">
@@ -50,7 +50,7 @@
       </div>
       
     </section>
-
+  <div class="flex-container">
     <section class="movie-card">
       <h2 id="movie-title">Title</h2>
       <div id="movie-poster"><img src="assets\images\placeholder.jpg" alt=""></div>
@@ -65,7 +65,7 @@
 
     <section id="drink-card">
     </section>
-
+  </div>
     <script src="./assets/javascript/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
