--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <br>
 
     <div class="flex-container">
-      <p>select by streaming services 👻</p>
+      <p id="streaming-tag">Select by streaming services. 👻</p>
     </div>
 
       <div class="service-btn">
@@ -56,14 +56,18 @@
       <div id="movie-poster"><img src="assets\images\placeholder.jpg" alt=""></div>
       <p id="movie-description">description</p>
       <p id="movie-year">year</p>
-      <p id="get-smashed-generator">Get Smashed?</p>
       <img src="./assets/images/netflix-logo.png" alt="netflix" class="float-right" id="icon-netflix"/>
       <img src="./assets/images/hulu-logo.png" alt="hulu" class="float-right" id="icon-hulu"/>
       <img src="./assets/images/prime-logo.png" alt="amazon prime" class="float-right" id="icon-prime"/>
       <img src="./assets/images/hbo-logo.png" alt="HBO" class="float-right" id="icon-hbo"/>
     </section>
 
-    <section id="drink-card">
+    <section class="drink-card">
+      <button type="button" id="get-smashed-generator">Get Smashed?</button>
+        <h2 id="drink-name">Drink Name</h2>
+        <div id="drink-image"></div>
+        <div id="ingredients"></div>
+        <div id="instructions"></div>
     </section>
   </div>
     <script src="./assets/javascript/script.js"></script>
