created drink card

--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@
       <img src="./assets/images/prime-logo.png" alt="amazon prime" class="float-right" id="icon-prime"/>
       <img src="./assets/images/hbo-logo.png" alt="HBO" class="float-right" id="icon-hbo"/>
     </section>
-
-    <section class="drink-card">
+    <div id="get-smashed-button">
       <button type="button" id="get-smashed-generator">Get Smashed?</button>
-        <h2 id="drink-name">Drink Name</h2>
+    </div>
+    <section class="drink-card">
+        <h2 id="drink-name"></h2>
         <div id="drink-image"></div>
         <div id="ingredients"></div>
         <div id="instructions"></div>
