--- a/index.html
+++ b/index.html
@@ -56,10 +56,12 @@
       <div id="movie-poster"><img src="assets\images\placeholder.jpg" alt=""></div>
       <p id="movie-description">description</p>
       <p id="movie-year">year</p>
-      <img src="./assets/images/netflix-logo.png" alt="netflix" class="float-right" id="icon-netflix"/>
-      <img src="./assets/images/hulu-logo.png" alt="hulu" class="float-right" id="icon-hulu"/>
-      <img src="./assets/images/prime-logo.png" alt="amazon prime" class="float-right" id="icon-prime"/>
-      <img src="./assets/images/hbo-logo.png" alt="HBO" class="float-right" id="icon-hbo"/>
+      <div class="streaming-btns">
+        <img src="./assets/images/netflix-logo.png" alt="netflix" class="float-right" id="icon-netflix"/>
+        <img src="./assets/images/hulu-logo.png" alt="hulu" class="float-right" id="icon-hulu"/>
+        <img src="./assets/images/prime-logo.png" alt="amazon prime" class="float-right" id="icon-prime"/>
+        <img src="./assets/images/hbo-logo.png" alt="HBO" class="float-right" id="icon-hbo"/>
+    </div>
     </section>
     <div id="get-smashed-button">
       <button type="button" id="get-smashed-generator">Get Smashed?</button>
