--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
     </div>
 
       <div class="service-btn">
-        <button type="button">
+        <button type="button" id="btn-hulu">
           <img src="assets/images/hulu-logo.png" alt="hulu-logo">
-          </button>
-        <button type="button">
-        <img src="assets/images/netflix-logo.png" alt="netflix-logo">
         </button>
-        <button type="button">
+        <button type="button" id="btn-netflix">
+          <img src="assets/images/netflix-logo.png" alt="netflix-logo">
+        </button>
+        <button type="button" id="btn-prime">
           <img src="assets/images/prime-logo.png" alt="prime-logo">
         </button>
-        <button type="button">
+        <button type="button" id="btn-hbo">
           <img src="assets/images/hbo-logo.png" alt="HBO-logo">
         </button>
 
