added functionaility and styling to drink card

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
   <body>
   
+
+
     <header class="logo">
-    <img src="assets/images/slashed-and-smashed-horizontal-1.png" alt="logo">
+    <img src="assets/images/slashed-and-smashed-horizontal-1.png" alt="slashed and smashed logo">
     </header>
 
 
@@ -63,16 +65,16 @@
         <img src="./assets/images/hbo-logo.png" alt="HBO" class="float-right" id="icon-hbo"/>
     </div>
     </section>
-    <div id="get-smashed-button">
-      <button type="button" id="get-smashed-generator">Get Smashed?</button>
+
+    <div id="get-smashed-container">
+      <button type="button" id="get-smashed-button" onClick="this.style.display='none';">Get Smashed?</button>
     </div>
-    <section class="drink-card">
-        <h2 id="drink-name"></h2>
-        <div id="drink-image"></div>
-        <div id="ingredients"></div>
-        <div id="instructions"></div>
-    </section>
+
+    <div class="drink-card"></div>
   </div>
+  
+
+
     <script src="./assets/javascript/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
