fixed js issues now card loads in with image and discription

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
       <button type="button" id="get-smashed-generator">Get Smashed?</button>
     </div>
     <section class="drink-card">
-        <h2 id="drink-name"></h2>
+        <!-- <h2 id="drink-name"></h2>
         <div id="drink-image"></div>
         <div id="ingredients"></div>
-        <div id="instructions"></div>
+        <div id="instructions"></div> -->
     </section>
   </div>
     <script src="./assets/javascript/script.js"></script>
