Streaming service buttons working

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   
 
 
-    <header class="logo">
+    <header id="main-screen" class="logo">
     <img src="assets/images/slashed-and-smashed-horizontal-1.png" alt="slashed and smashed logo">
     </header>
 
 
-    <section">
+    <section>
       <div class="container">
         <form>
           <i class="fa fa-search"></i>
