getTmdbApi now pulls info from the TMDB API

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
       </div>
       
     </section>
+
   <div class="flex-container">
-    <section class="movie-card">
+    <div class="movie-card">
       <h2 id="movie-title">Title</h2>
       <div id="movie-poster"><img src="assets\images\placeholder.jpg" alt=""></div>
       <p id="movie-description">description</p>
@@ -64,7 +65,8 @@
         <img src="./assets/images/prime-logo.png" alt="amazon prime" class="float-right" id="icon-prime"/>
         <img src="./assets/images/hbo-logo.png" alt="HBO" class="float-right" id="icon-hbo"/>
     </div>
-    </section>
+
+  </div>
 
     <div id="get-smashed-container">
       <button type="button" id="get-smashed-button" onClick="this.style.display='none';">Get Smashed?</button>
@@ -72,13 +74,11 @@
 
     <div class="drink-card"></div>
   </div>
-  
-
 
     <script src="./assets/javascript/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
     <!-- script for maginfying glass logo in search bar -->
-    <script src="https://kit.fontawesome.com/67386b82fb.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/67386b82fb.js" crossorigin="anonymous"></script> -->
   </body>
 </html>
