fixed drink card

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <img src="assets/images/slashed-and-smashed-horizontal-1.png" alt="slashed and smashed logo">
     </header>
 
-      <div class="flex-container">
+      <div class="streaming-tag-cont">
         <p id="streaming-tag">Select by streaming services. 👻</p>
       </div>
 
