MotN api data not appending

--- a/index.html
+++ b/index.html
@@ -36,13 +36,16 @@
             <img src="assets/images/hbo-logo.png" alt="HBO-logo">
           </button>
 
+        
         </div>
       </div>
 
     </section>
+    
+    <div class="movie-list-container">
+      <div class="flex-container">
 
-    <div class="flex-container">
-
+      </div>
     </div>
   </div>
 
