--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
   <script src="./assets/javascript/script.js"></script>
 
   <!-- script for maginfying glass logo in search bar -->
