HTML & JavaScript Refactored

--- a/index.html
+++ b/index.html
@@ -12,46 +12,38 @@
 
 <body>
 
+  <!-- Header / Logo section -->
+  <header class="logo">
+    <img src="assets/images/slashed-and-smashed-horizontal-1.png" alt="slashed and smashed logo">
+  </header>
 
-  <div id="main-screen">
-    <header class="logo">
-      <img src="assets/images/slashed-and-smashed-horizontal-1.png" alt="slashed and smashed logo">
-    </header>
+  <div class="streaming-tag-cont">
+    <p id="streaming-tag">Select by streaming services. 👻</p>
+  </div>
 
-      <div class="streaming-tag-cont">
-        <p id="streaming-tag">Select by streaming services. 👻</p>
-      </div>
+  <!-- Streaming Service Buttons -->
+  <div class="service-btn">
+    <button type="button" id="btn-hulu">
+      <img src="assets/images/hulu-logo.png" alt="hulu-logo">
+    </button>
+    <button type="button" id="btn-netflix">
+      <img src="assets/images/netflix-logo.png" alt="netflix-logo">
+    </button>
+    <button type="button" id="btn-prime">
+      <img src="assets/images/prime-logo.png" alt="prime-logo">
+    </button>
+    <button type="button" id="btn-hbo">
+      <img src="assets/images/hbo-logo.png" alt="HBO-logo">
+    </button>
+  </div>
 
-      <div class="service-btn">
-          <button type="button" id="btn-hulu">
-            <img src="assets/images/hulu-logo.png" alt="hulu-logo">
-          </button>
-          <button type="button" id="btn-netflix">
-            <img src="assets/images/netflix-logo.png" alt="netflix-logo">
-          </button>
-          <button type="button" id="btn-prime">
-            <img src="assets/images/prime-logo.png" alt="prime-logo">
-          </button>
-          <button type="button" id="btn-hbo">
-            <img src="assets/images/hbo-logo.png" alt="HBO-logo">
-          </button>
-
-        
-        </div>
-      </div>
-
-    </section>
-    
-    <div class="movie-list-container">
-      <div class="flex-container">
-
-      </div>
+  <!-- Movie Card Styling Section -->
+  <div class="movie-list-container">
+    <div class="flex-container">
     </div>
   </div>
 
-  <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
   <script src="./assets/javascript/script.js"></script>
-
   <!-- script for maginfying glass logo in search bar -->
   <script src="https://kit.fontawesome.com/67386b82fb.js" crossorigin="anonymous"></script>
 </body>
