Added more info to the readme file and added an event listener to the logo that reloads the page when clicked

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
       <div class="streaming-tag-cont">
-        <p id="streaming-tag">Select by streaming services. 👻</p>
+        <p id="streaming-tag">Search by streaming service</p>
       </div>
 
       <div class="service-btn">
